fix(campaign-add credits dialog): resolve number input overlapping issue with subsequent labels.
This update prevents multiple SMS messages endpoint calls by correctingn distinctUntilChanged usage.

--- a/src/newapp/shared/components/stripe-payment-modal/stripe-payment-modal.component.scss
+++ b/src/newapp/shared/components/stripe-payment-modal/stripe-payment-modal.component.scss
@@ -12,3 +12,8 @@
   text-align: right;
   margin-top: 25px;
 }
+
+.app-form-field {
+  display: block;
+  margin-bottom: 1rem;
+}
